Atualizar URL da API do Google Apps Script

--- a/src/pages/cardapio.html
+++ b/src/pages/cardapio.html
@@ -381,7 +381,7 @@
   <div class="container">
     <main class="main-content">
       <h1 style="text-align: center; color: var(--color-primary-6); margin-bottom: 2rem; font-size: 2.5rem;">
-        🍰 Cardápio Doce Sensações
+        Cardápio
       </h1>
       
       <div class="products" id="products-container">
@@ -393,15 +393,6 @@
       </div>
     </main>
   </div>
-
-  <section class="newsletter">
-    <h2>Pronto para receber nossas novidades?</h2>
-    <input type="email" placeholder="Seu e-mail">
-    <button>Enviar</button>
-    <p style="margin-top: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">
-      Especializada em delícias por delivery, oferecemos um cardápio variado com ingredientes selecionados e um toque de carinho que só uma verdadeira confeiteira pode oferecer.
-    </p>
-  </section>
 
   <section class="newsletter">
     <h2>Pronto para receber nossas novidades?</h2>
