--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <header>
         <nav id="navbar">
-            <i class="fa-solid fa-burger" id="nav_logo"> Doce Sensações</i>
+            <div id="nav_logo">
+                <img src="src/images/logo.PNG" alt="Doce Sensações">
+            </div>
 
             <ul id="nav_list">
                 <li class="nav-item active">
@@ -60,6 +62,7 @@
         <section id="home">
             <div class="shape"></div>
             <div id="cta">
+                <h2 class="dancing-script-600" style="font-size: 2.5rem; color: var(--color-primary-6); margin-bottom: 1rem; text-align: center;">Doce Sensações</h2>
                 <h1 class="title">
                     O sabor que vai até
                     <span>você</span>
