Substituição da logo por ícone de cupcake na navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav id="navbar">
             <div id="nav_logo">
-                <img src="src/images/logo.PNG" alt="Doce Sensações">
+                <i class="fa-solid fa-cake-candles"></i>
             </div>
 
             <ul id="nav_list">
