Fonte Borel aplicada ao nome 'Doce Sensações' na página inicial

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="home">
             <div class="shape"></div>
             <div id="cta">
-                <h2 class="dancing-script-600" style="font-size: 2.5rem; color: var(--color-primary-6); margin-bottom: 1rem; text-align: center;">Doce Sensações</h2>
+                <h2 class="borel-regular" style="font-size: 2.5rem; color: var(--color-primary-6); margin-bottom: 1rem; text-align: center;">Doce Sensações</h2>
                 <h1 class="title">
                     O sabor que vai até
                     <span>você</span>
