--- a/src/pages/admin-cadastro-produto.html
+++ b/src/pages/admin-cadastro-produto.html
@@ -1,115 +1,346 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Produto | Admin - Doce Sensações</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/button.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        .admin-container {
-            max-width: 500px;
-            margin: 40px auto;
-            background: #fff;
-            border-radius: 16px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-            padding: 2rem 2.5rem;
-        }
-        .admin-title {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: var(--color-primary-6);
-            font-size: 2rem;
-        }
-        .admin-form label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 600;
-            color: var(--color-primary-6);
-        }
-        .admin-form input, .admin-form textarea {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid #eee;
-            border-radius: 8px;
-            margin-bottom: 1.5rem;
-            font-size: 1rem;
-            background: #fafafa;
-            font-family: 'Montserrat', sans-serif;
-        }
-        .admin-form textarea {
-            min-height: 80px;
-            resize: vertical;
-        }
-        .admin-form .btn-default {
-            width: 100%;
-            font-size: 1.1rem;
-        }
-        .admin-form .input-group {
-            margin-bottom: 1.5rem;
-        }
-        .admin-form input[type="file"] {
-            padding: 0.3rem 0.75rem;
-            background: none;
-        }
-        .admin-form .preview-img {
-            display: block;
-            max-width: 120px;
-            max-height: 120px;
-            margin: 0 auto 1rem auto;
-            border-radius: 10px;
-            object-fit: cover;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cadastro de Produto</title>
+
+  <!-- Google Fonts Nunito -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+    rel="stylesheet"
+  />
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
+  <style>
+    body {
+      background-color: #f2f2f2;
+      font-family: 'Nunito', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 0 15px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 25px;
+    }
+
+    .card {
+      background-color: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+      position: relative; /* para posicionar botão absoluto dentro */
+      min-height: 550px; /* pra garantir espaço pro botão no canto */
+    }
+
+    form label {
+      display: block;
+      margin: 15px 0 5px;
+      color: #555;
+      font-weight: 600;
+    }
+
+    form input[type='text'],
+    form input[type='number'],
+    form select,
+    form textarea {
+      width: 100%;
+      padding: 10px 14px;
+      border: none;
+      border-radius: 25px;
+      background-color: #f0f0f0;
+      font-size: 16px;
+      box-sizing: border-box;
+      transition: background-color 0.2s;
+      color: #333;
+      font-family: 'Nunito', sans-serif;
+    }
+
+    form input:focus,
+    form textarea:focus,
+    form select:focus {
+      outline: none;
+      background-color: #e0e0e0;
+    }
+
+    form input[readonly] {
+      background-color: #ddd;
+      color: #555;
+      cursor: not-allowed;
+    }
+
+    .custom-file {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      background-color: #eb2e7d;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      font-size: 20px;
+      transition: background 0.3s;
+    }
+
+    .custom-file:hover {
+      background-color: #b4235f;
+    }
+
+    .custom-file i {
+      color: white;
+    }
+
+    #imagem {
+      display: none;
+    }
+
+    .row-group {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+
+    .row-group .form-group {
+      flex: 1;
+      min-width: 180px;
+    }
+
+    /* Botão personalizado menor, no canto inferior direito, com bordas circulares */
+    button[type='submit'] {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      background-color: #eb2e7d;
+      color: white;
+      padding: 10px 18px;
+      font-size: 14px;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-family: 'Nunito', sans-serif;
+      font-weight: 600;
+      transition: background 0.3s;
+      box-shadow: 0 3px 6px rgba(235, 46, 125, 0.6);
+    }
+
+    button[type='submit']:hover {
+      background-color: #b4235f;
+      box-shadow: 0 5px 10px rgba(180, 35, 95, 0.8);
+    }
+  </style>
 </head>
 <body>
-    <div class="admin-container">
-        <h2 class="admin-title dancing-script-600">Cadastro de Produto</h2>
-        <form class="admin-form" id="form-cadastro-produto" autocomplete="off">
-            <div class="input-group">
-                <label for="nome">Nome do Produto</label>
-                <input type="text" id="nome" name="nome" required maxlength="60">
+  <div class="container">
+    <h1>Cadastro de Produto</h1>
+    <div class="card">
+      <form action="backend.php" method="POST" enctype="multipart/form-data" id="produto-form">
+
+        <label for="id">ID</label>
+        <input type="number" id="id" name="id" readonly />
+
+        <label for="nome">Nome</label>
+        <input type="text" id="nome" name="nome" required />
+
+        <label for="descricao">Descrição</label>
+        <textarea id="descricao" name="descricao" rows="4" required></textarea>
+
+        <div class="row-group">
+          <div class="form-group">
+            <label for="preco">Preço (R$)</label>
+            <input type="number" id="preco" name="preco" step="0.01" required />
+          </div>
+
+          <div class="form-group">
+            <label for="categoria">Categoria</label>
+            <select id="categoria" name="categoria" required>
+              <option value="">Selecione...</option>
+              <option value="Doce/Recheado">Doce/Recheado</option>
+              <option value="Doce/Bolo">Doce/Bolo</option>
+              <option value="Doce/Torta">Doce/Torta</option>
+              <option value="Doce/Biscoito">Doce/Biscoito</option>
+              <option value="Doce/Trufa">Doce/Trufa</option>
+              <option value="Doce/Frito">Doce/Frito</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="modalidade">Modalidade de Fornecimento</label>
+          <div class="multiselect" id="multiselect-modalidade">
+            <button
+              type="button"
+              class="multiselect-button"
+              aria-haspopup="listbox"
+              aria-expanded="false"
+              id="multiselect-btn"
+            >
+              Selecione...
+              <span class="multiselect-arrow">&#9662;</span>
+            </button>
+            <div
+              class="multiselect-content"
+              role="listbox"
+              aria-multiselectable="true"
+              tabindex="-1"
+            >
+              <label class="multiselect-option">
+                <input type="checkbox" value="pronta_entrega" />
+                Pronta Entrega
+              </label>
+              <label class="multiselect-option">
+                <input type="checkbox" value="encomendas" />
+                Encomendas
+              </label>
+              <label class="multiselect-option">
+                <input type="checkbox" value="sob_demanda" />
+                Sob Demanda
+              </label>
+              <label class="multiselect-option">
+                <input type="checkbox" value="importado" />
+                Importado
+              </label>
+              <label class="multiselect-option">
+                <input type="checkbox" value="outros" />
+                Outros
+              </label>
             </div>
-            <div class="input-group">
-                <label for="descricao">Descrição</label>
-                <textarea id="descricao" name="descricao" required maxlength="200"></textarea>
-            </div>
-            <div class="input-group">
-                <label for="preco">Preço (R$)</label>
-                <input type="number" id="preco" name="preco" required min="0" step="0.01">
-            </div>
-            <div class="input-group">
-                <label for="imagem">Imagem do Produto</label>
-                <input type="file" id="imagem" name="imagem" accept="image/*">
-                <img id="preview" class="preview-img" style="display:none;" alt="Prévia da imagem">
-            </div>
-            <button type="submit" class="btn-default"><i class="fa-solid fa-plus"></i> Cadastrar Produto</button>
-        </form>
+          </div>
+        </div>
+
+        <label>Imagem</label>
+        <label class="custom-file" for="imagem"><i class="fas fa-image"></i></label>
+        <input type="file" id="imagem" name="imagem" accept="image/*" />
+
+        <div class="row-group">
+          <div class="form-group">
+            <label for="desconto">Desconto (%)</label>
+            <input type="number" id="desconto" name="desconto" min="0" max="100" step="0.1" />
+          </div>
+
+          <div class="form-group">
+            <label for="status">Status</label>
+            <select id="status" name="status" required>
+              <option value="">Selecione...</option>
+              <option value="ativo">Ativo</option>
+              <option value="inativo">Inativo</option>
+              <option value="pendente">Pendente</option>
+            </select>
+          </div>
+        </div>
+
+        <button type="submit">
+          <i class="fas fa-shopping-bag"></i>
+          Cadastrar Produto
+        </button>
+      </form>
     </div>
-    <script>
-        // Preview da imagem
-        document.getElementById('imagem').addEventListener('change', function(event) {
-            const [file] = event.target.files;
-            const preview = document.getElementById('preview');
-            if (file) {
-                preview.src = URL.createObjectURL(file);
-                preview.style.display = 'block';
-            } else {
-                preview.src = '';
-                preview.style.display = 'none';
-            }
+  </div>
+
+  <!-- Script para integração com Google Sheets -->
+  <script src="../javascript/cadastro-produto.js"></script>
+
+  <script>
+    // Gera um ID aleatório entre 1000 e 99999 e preenche o campo readonly
+    window.addEventListener('DOMContentLoaded', () => {
+      const idInput = document.getElementById('id');
+      const randomId = Math.floor(Math.random() * (99999 - 1000 + 1)) + 1000;
+      idInput.value = randomId;
+    });
+
+    // Custom multiselect logic
+    (() => {
+      const multiselect = document.getElementById('multiselect-modalidade');
+      const button = multiselect.querySelector('.multiselect-button');
+      const content = multiselect.querySelector('.multiselect-content');
+      const checkboxes = content.querySelectorAll('input[type="checkbox"]');
+
+      // Toggle dropdown
+      button.addEventListener('click', () => {
+        const expanded = button.getAttribute('aria-expanded') === 'true';
+        button.setAttribute('aria-expanded', String(!expanded));
+        content.classList.toggle('show');
+        button.querySelector('.multiselect-arrow').classList.toggle('open');
+      });
+
+      // Close dropdown if clicked outside
+      document.addEventListener('click', (e) => {
+        if (!multiselect.contains(e.target)) {
+          button.setAttribute('aria-expanded', 'false');
+          content.classList.remove('show');
+          button.querySelector('.multiselect-arrow').classList.remove('open');
+        }
+      });
+
+      // Update button label on change
+      function updateButtonLabel() {
+        const checked = Array.from(checkboxes)
+          .filter((cb) => cb.checked)
+          .map((cb) => cb.parentNode.textContent.trim());
+
+        button.textContent = checked.length ? checked.join(', ') : 'Selecione...';
+
+        // Re-add arrow after changing textContent
+        const arrow = document.createElement('span');
+        arrow.className = 'multiselect-arrow';
+        arrow.innerHTML = '&#9662;';
+        if (content.classList.contains('show')) {
+          arrow.classList.add('open');
+        }
+        button.appendChild(arrow);
+      }
+
+      checkboxes.forEach((cb) => {
+        cb.addEventListener('change', updateButtonLabel);
+      });
+
+      // Initialize label
+      updateButtonLabel();
+
+      // On form submit, create hidden inputs for each checked option
+      const form = document.getElementById('produto-form');
+      form.addEventListener('submit', (e) => {
+        // Remove previous hidden inputs (if any)
+        form.querySelectorAll('input[name="modalidade[]"]').forEach((el) => el.remove());
+
+        checkboxes.forEach((cb) => {
+          if (cb.checked) {
+            const hidden = document.createElement('input');
+            hidden.type = 'hidden';
+            hidden.name = 'modalidade[]';
+            hidden.value = cb.value;
+            form.appendChild(hidden);
+          }
         });
-        // (Futuro) Envio do formulário pode ser integrado com backend/planilha
-        document.getElementById('form-cadastro-produto').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Produto cadastrado! (Integração futura com backend)');
-            this.reset();
-            document.getElementById('preview').style.display = 'none';
-        });
-    </script>
+
+        // If none selected, prevent submit (optional)
+        if (![...checkboxes].some((cb) => cb.checked)) {
+          e.preventDefault();
+          alert('Por favor, selecione ao menos uma modalidade de fornecimento.');
+          button.focus();
+        }
+      });
+    })();
+  </script>
 </body>
 </html> 
