fix: Corrigir URLs e campos do teste frontend - Corrigir URLs para apontar para Vercel em vez de Render - Ajustar nomes dos campos de consentimento para match com backend - Resolver erro 404 na rota de cadastro - Melhorar compatibilidade entre frontend e backend

--- a/teste-frontend-lgpd.html
+++ b/teste-frontend-lgpd.html
@@ -161,16 +161,16 @@
         <h2>Teste 4: Páginas do Site</h2>
         <div class="test-section">
             <h3>Links para testar as páginas principais</h3>
-            <a href="https://docesensacoes-2.onrender.com" target="_blank">
+            <a href="https://docesensacoessite.vercel.app" target="_blank">
                 <button>🏠 Página Inicial</button>
             </a>
-            <a href="https://docesensacoes-2.onrender.com/src/pages/cadastro.html" target="_blank">
+            <a href="https://docesensacoessite.vercel.app/src/pages/cadastro.html" target="_blank">
                 <button>📝 Página de Cadastro</button>
             </a>
-            <a href="https://docesensacoes-2.onrender.com/src/pages/cardapio.html" target="_blank">
+            <a href="https://docesensacoessite.vercel.app/src/pages/cardapio.html" target="_blank">
                 <button>🍰 Página do Cardápio</button>
             </a>
-            <a href="https://docesensacoes-2.onrender.com/src/pages/login.html" target="_blank">
+            <a href="https://docesensacoessite.vercel.app/src/pages/login.html" target="_blank">
                 <button>🔐 Página de Login</button>
             </a>
         </div>
@@ -214,9 +214,8 @@
                 email: document.getElementById('email').value,
                 phone: document.getElementById('phone').value,
                 password: document.getElementById('password').value,
-                consent_privacy: document.getElementById('consent-privacy').checked,
-                consent_marketing: document.getElementById('consent-marketing').checked,
-                consent_third_party: document.getElementById('consent-third-party').checked
+                consentMarketing: document.getElementById('consent-marketing').checked,
+                consentThirdParty: document.getElementById('consent-third-party').checked
             };
             
             try {
