--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -55,7 +55,7 @@
 
         .signup-header h1 {
             color: #2d3748;
-            font-size: 28px;
+            font-size: clamp(1.3rem, 4vw, 2rem);
             font-weight: 700;
             margin-bottom: 8px;
             letter-spacing: -0.5px;
@@ -63,7 +63,7 @@
 
         .signup-header p {
             color: #718096;
-            font-size: 16px;
+            font-size: clamp(1rem, 2vw, 1.1rem);
             font-weight: 400;
         }
 
@@ -139,8 +139,9 @@
             transition: color 0.3s ease;
         }
 
-        .password-toggle:hover {
+        .password-toggle:hover, .password-toggle:focus {
             color: #667eea;
+            outline: 2px solid #667eea;
         }
 
         .password-strength {
@@ -228,9 +229,10 @@
             overflow: hidden;
         }
 
-        .signup-btn:hover {
+        .signup-btn:hover, .signup-btn:focus {
             transform: translateY(-2px);
             box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
+            outline: 2px solid #667eea;
         }
 
         .signup-btn:active {
@@ -335,6 +337,16 @@
         .required-field::after {
             content: ' *';
             color: #e53e3e;
+        }
+
+        @media (max-width: 600px) {
+            .signup-container {
+                padding: 16px;
+                max-width: 100vw;
+            }
+            body {
+                padding: 4px;
+            }
         }
     </style>
 </head>
@@ -643,12 +655,9 @@
                     password: usuarioData.password
                 });
                 
-                showNotification('Conta criada com sucesso! Redirecionando...', 'success');
-                
-                // Redirecionar após 2 segundos
-                setTimeout(() => {
-                    window.location.href = '../index.html';
-                }, 2000);
+                // Após cadastro bem-sucedido
+                setFlashMessage('Cadastro realizado com sucesso! Faça login para continuar.', 'success');
+                window.location.replace('login.html');
 
             } catch (error) {
                 console.error('Erro no cadastro:', error);
